--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Landing Page</title>
    </head>
-   <body></body>
+   <body>
+      <div class="header">
+         <p>Header Logo</p>
+         <ul>
+            <li>Header link 1</li>
+            <li>Header link 2</li>
+            <li>Header link 3</li>
+         </ul>
+      </div>
+   </body>
 </html>
