Make nav list items into <a> elements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <div class="header">
          <p>Header Logo</p>
          <ul>
-            <li>Header link 1</li>
-            <li>Header link 2</li>
-            <li>Header link 3</li>
+            <li><a href="#">Header link 1</a></li>
+            <li><a href="#">Header link 2</a></li>
+            <li><a href="#">Header link 3</a></li>
          </ul>
       </div>
    </body>
