--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
             <li><a href="#">Header link 2</a></li>
             <li><a href="#">Header link 3</a></li>
          </ul>
+         <div class="header-pt2">
+            <div class="header-pt2-1">
+               <h1>This website is awesome</h1>
+               <p>
+                  This website has some subtext that goes here under the main
+                  title. It's a smaller font and the color is lower contrast
+               </p>
+               <button>Sign up</button>
+            </div>
+            <div class="header-pt2-2">
+               <img src="" alt="" />
+            </div>
+         </div>
       </div>
    </body>
 </html>
