Add header logo and ul to header-pt1 div

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
    </head>
    <body>
       <div class="header">
-         <p>Header Logo</p>
-         <ul>
-            <li><a href="#">Header link 1</a></li>
-            <li><a href="#">Header link 2</a></li>
-            <li><a href="#">Header link 3</a></li>
-         </ul>
+         <div class="header-pt1">
+            <p>Header Logo</p>
+            <ul>
+               <li><a href="#">Header link 1</a></li>
+               <li><a href="#">Header link 2</a></li>
+               <li><a href="#">Header link 3</a></li>
+            </ul>
+         </div>
          <div class="header-pt2">
             <div class="header-pt2-1">
                <h1>This website is awesome</h1>
