Add nav-list class to nav links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="header">
          <div class="header-pt1">
             <p>Header Logo</p>
-            <ul>
+            <ul class="nav-list">
                <li><a href="#">Header link 1</a></li>
                <li><a href="#">Header link 2</a></li>
                <li><a href="#">Header link 3</a></li>
