Change h1 under header-p2-1 to p and added class
Added class of main-hero-text to the p

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </div>
          <div class="header-pt2">
             <div class="header-pt2-1">
-               <h1>This website is awesome</h1>
+               <p class="hero-main-text">This website is awesome</p>
                <p>
                   This website has some subtext that goes here under the main
                   title. It's a smaller font and the color is lower contrast
