--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                <button>Sign up</button>
             </div>
             <div class="header-pt2-2">
-               <img src="" alt="" />
+               <div class="img-placeholder">
             </div>
          </div>
       </div>
