Add closing div tag to img-placeholder div

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                <button>Sign up</button>
             </div>
             <div class="header-pt2-2">
-               <div class="img-placeholder">
+               <div class="img-placeholder"></div>
             </div>
          </div>
       </div>
