--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                <button>Sign up</button>
             </div>
             <div class="header-pt2-2">
-               <div class="img-placeholder"></div>
+               <div class="img-placeholder">
+                  This is a placeholder for an image
+               </div>
             </div>
          </div>
       </div>
