--- a/index.html
+++ b/index.html
@@ -39,5 +39,26 @@
             </div>
          </div>
       </div>
+      <div class="section-1">
+         <p class="sec1-header">Some random Information</p>
+         <div class="boxes">
+            <div class="box1-container">
+               <div class="box1"></div>
+               <p>This is some subtext under the illustration or image</p>
+            </div>
+            <div class="box2-container">
+               <div class="box2"></div>
+               <p>This is some subtext under the illustration or image</p>
+            </div>
+            <div class="box3-container">
+               <div class="box3"></div>
+               <p>This is some subtext under the illustration or image</p>
+            </div>
+            <div class="box4-container">
+               <div class="box4"></div>
+               <p>This is some subtext under the illustration or image</p>
+            </div>
+         </div>
+      </div>
    </body>
 </html>
