--- a/index.html
+++ b/index.html
@@ -60,5 +60,13 @@
             </div>
          </div>
       </div>
+      <div class="section-2">
+         <blockquote>
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All | know is that it looks nice.
+         </blockquote>
+         <figcaption>-Thor, God of Thunder</figcaption>
+      </div>
    </body>
 </html>
