--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
       </div>
       <div class="section-2">
          <blockquote>
-            This is an inspiring quote, or a testimonial from a customer. Maybe
-            it's just filling up space, or maybe people will actually read it.
-            Who knows? All | know is that it looks nice.
+            <em
+               >This is an inspiring quote, or a testimonial from a customer.
+               Maybe it's just filling up space, or maybe people will actually
+               read it. Who knows? All | know is that it looks nice.</em
+            >
          </blockquote>
          <figcaption>-Thor, God of Thunder</figcaption>
       </div>
