--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
          href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
          rel="stylesheet"
       />
-
       <link rel="stylesheet" href="style.css" />
       <title>Landing Page</title>
    </head>
@@ -62,12 +61,14 @@
          </div>
       </div>
       <div class="section-2">
-         <blockquote>
-            This is an inspiring quote, or a testimonial from a customer. Maybe
-            it's just filling up space, or maybe people will actually read it.
-            Who knows? All | know is that it looks nice.
-         </blockquote>
-         <figcaption>-Thor, God of Thunder</figcaption>
+         <div class= "quote-container">
+            <blockquote>
+               This is an inspiring quote, or a testimonial from a customer.
+               Maybe it's just filling up space, or maybe people will actually
+               read it. Who knows? All | know is that it looks nice.
+            </blockquote>
+            <figcaption>-Thor, God of Thunder</figcaption>
+         </div>
       </div>
    </body>
 </html>
