Add section 3 div and add text and button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          </div>
       </div>
       <div class="section-2">
-         <div class= "quote-container">
+         <div class="quote-container">
             <blockquote>
                This is an inspiring quote, or a testimonial from a customer.
                Maybe it's just filling up space, or maybe people will actually
@@ -69,6 +69,15 @@
             </blockquote>
             <figcaption>-Thor, God of Thunder</figcaption>
          </div>
+      </div>
+      <div class="section-3">
+         <div class="sec2-item1">
+            <p>Call to action! It's time!</p>
+            <p>
+               Sign up for our product by clicking that button right over there!
+            </p>
+         </div>
+         <button class="sign-btn-2">Sign up</button>
       </div>
    </body>
 </html>
