Edit class name of second sign up button

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                Sign up for our product by clicking that button right over there!
             </p>
          </div>
-         <button class="sign-btn-2">Sign up</button>
+         <button class="signup-btn-2">Sign up</button>
       </div>
    </body>
 </html>
