Add class to p elements inside sec3-item1

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       </div>
       <div class="section-3">
          <div class="sec3-item1">
-            <p>Call to action! It's time!</p>
-            <p>
+            <p class="sec3-txt1">Call to action! It's time!</p>
+            <p class="sec3-text2">
                Sign up for our product by clicking that button right over there!
             </p>
          </div>
