Fix class name of 2nd p element in sec3

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="section-3">
          <div class="sec3-item1">
             <p class="sec3-txt1">Call to action! It's time!</p>
-            <p class="sec3-text2">
+            <p class="sec3-txt2">
                Sign up for our product by clicking that button right over there!
             </p>
          </div>
