Add foot element and its text

--- a/index.html
+++ b/index.html
@@ -79,5 +79,8 @@
          </div>
          <button class="signup-btn-2">Sign up</button>
       </div>
+      <div class="footer">
+         <p>Copyright &copy The Odin Project 2021</p>
+      </div>
    </body>
 </html>
